--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,133 @@
  *= require_tree .
  *= require_self
  */
+
+  @media screen {
+  /* --- Reset Styles --- */
+  * {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  html, body {
+    height: 100%;
+    width: 100%;
+  }
+
+  /* --- Welcome Page Styles --- */
+  body {
+    background-color: rgb(255, 255, 255);
+    color: #333;
+    font-family: Sans-Serif;
+    line-height: 18px;
+  }
+  .container{
+  align-content: right;
+  width: 100%;
+  height: 50%;
+}
+
+  .wrapper {
+    background: whitesmoke;
+    -moz-box-shadow: 0 0 10px rgba(0,0,0,.3);
+    -webkit-box-shadow: 0 0 10px rgba(0,0,0,.3);
+    box-shadow: 0 0 10px rgba(0,0,0,.3);
+    margin: 16px auto; 
+    max-width: 700px;
+    padding: 2.25%; /* 18px / 800px */
+    width: 85%;
+  }
+
+  h1 {
+    font-size: 36px;
+  }
+
+  h2 {
+    font-size: 24px;
+   
+  }
+
+
+  .a{
+    /* margin-bottom: 18px; */
+    color: cornsilk;
+    font-style: normal;
+    font-size: 20px;
+}
+  .b{
+     color: rgb(17, 17, 16);
+     font-size: 20px;
+     
+
+  }
+  p.b{
+    /* margin-bottom: 18px; */
+    color: rgb(247, 97, 147);
+    font-size: 20px;
+  }
+
+.center{
+ font-family: "Sofia";
+ color: rgb(73, 60, 42);
+}
+  .main {
+    overflow: hidden;
+  }
+
+  .content {
+    float: left;
+    width: 20%; /* 480px / 800px */
+  }
+
+  .sidebar {
+    background: #eee;
+    border: 1px solid #ccc;
+    float: right;
+    padding: 2.08333333333%; /* 5px / 240px */
+    width: 30%; /* 240px / 800px */
+  }
+
+  .sidebar ul {
+    font-size: 14px;
+  }
+
+  .branding {
+    clear: both;
+  }
+
+  footer.branding {
+    border-top: 2px solid #ccc;
+    margin-top: 20px;
+    padding-top: 20px;
+  }
+
+@media screen and (max-width: 600px) {
+  .wrapper {
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    width: auto;
+  }
+
+  .content, .sidebar {
+    float: none;
+    width: 100%;
+  }
+
+  .sidebar {
+    background: transparent;
+    border: none;
+    border-top: 2px solid #ccc;
+    padding: 0;
+  }
+
+  h1 {
+    font-size: 24px;
+    /* line-height: 36px; */
+  }
+
+  h2 {
+    font-size: 18px;
+    /* line-height: 24px; */
+  }
