--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -6,5 +6,5 @@
 
 <h6><%= link_to "Female Artist",female_path(@female) %></h6>
 <h6><%= link_to "Male Artist",male_path(@male) %></h6>
-
+<%= link_to "Add New Artist", new_artist_path %> <br> 
 
