--- a/app/views/artists/female.html.erb
+++ b/app/views/artists/female.html.erb
@@ -1,7 +1,7 @@
-<ul>
-<p>Female</p>
+<h2 class= "center">FEMALE ARTISTS</h2>
 <% @females.each do |female| %>
-  <h1><%= female.name%></h1>
-<% end  %>
+<ul class="collection with-header">
+<li class="collection-header"><h4> <%= female.name%></h4></li>
 </ul>
-<%= link_to "Home", artists_path %>
+<% end %>
+ <%= link_to "Home", artists_path %> 
