--- a/app/views/artists/male.html.erb
+++ b/app/views/artists/male.html.erb
@@ -1,7 +1,7 @@
-<p>Male</p>
-<ul>
+<h2 class= "center">MALE ARTISTS</h2>
 <% @males.each do |male| %>
-  <h1><%= male.name%></h1>
-<% end  %>
+<ul class="collection with-header">
+<li class="collection-header"><h4> <%= male.name%></h4></li>
 </ul>
-<%= link_to "Home", artists_path %>
+<% end %>
+ <%= link_to "Home", artists_path %> 
