--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,19 +1,31 @@
-<h1><%= @artist.name %></h1> 
- <h1><%= @artist.gender %></h1>
-  <h1><%= @artist.height%> </h1>
-  <h1><%= @artist.age %></h1> 
- 
+<nav class="nav-extended">
+    <div class="nav-wrapper">
+      <a  class="brand-logo"> ARTIST </a>
+      <ul class="right hide-on-med-and-down">
+       <li> <%= link_to "Edit ", edit_artist_path(@artist) %> </li>
+       <li> <%= link_to("Delete", @artist, method: :delete, data:{confirm: "Do you want to delete this Artist?"}) %></li>
+       <li> <%= link_to "Add New Squad", new_artist_glam_path(@artist) %> <br> 
+        <li> <%= link_to "Home", artists_path %></li>
+      </ul>
+    </div>
+  </nav>
 
-<ul>
+   <ul class="collection with-header">
+    <li class="collection-item"><p class="white "> Name: <%= @artist.name%> </p><a class="secondary-content"></a></div>
+    <li class="collection-item"><p class="white "> Gender: <%= @artist.gender%> </p><a class="secondary-content"></a></div>
+    <li class="collection-item"><p class="white "> Height:  <%= @artist.height%> </p><a class="secondary-content"></a></div>
+    <li class="collection-item"><p class="white "> Age: <%= @artist.age%></p><a class="secondary-content"></a></div>
+      </ul>
+
+<h4 class = "center"> List of Glam Squad for <%= @artist.name%></h4>
   <% @artist.glams.each do |glam| %>
-     <li><%= link_to glam.glam_squad, artist_glam_path(@artist, glam) %></li>
+  <ul class="collection with-header">
+        <li class="collection-item"><div><p class="white "> <%= link_to glam.glam_squad, artist_glam_path(@artist, glam) %> </p><a class="secondary-content"><i class="material-icons">send</i></a></div></li>
+    </ul>
   <% end %>
-</ul>
 
 
 
-<h6><%= link_to "Edit ", edit_artist_path(@artist) %></h6>
 
-<h6><%= link_to("Delete an Artist", @artist, method: :delete, data:{confirm: "Do you really want to delete me?"}) %></h6>
 
-<%= link_to "Home", artists_path %>
+ 
