--- a/app/views/glams/new.html.erb
+++ b/app/views/glams/new.html.erb
@@ -1,17 +1,34 @@
-<h1>Create a new squad</h1>
-
-
+<h1 class = "center">Create a new squad</h1>
+<div class="wrapper">
 <%= form_with model: @glam, local: true do | f | %>
-        <%= f.label :glam_squad %>
-        <%= f.text_field :glam_squad %><br />
-        <%= f.label :makeup %>
-        <%= f.text_field :makeup%><br />
-        <%= f.label :hair %>
-        <%= f.text_field :hair %><br />
-        <%= f.label :wardrobe %>
-        <%= f.text_field :wardrobe %><br />
-        <%# <%= f.label :artist_name  %>
-        <%# <%= f.text_field :artist_name %>  
+     
+ <div class="field">
+    <%= f.label :glam_squad %>
+     <%= f.text_field :glam_squad, autocomplete: "glam_squad"%>
+  </div>
+
+  <div class="field">
+    <%= f.label :makeup %><br />
+    <%= f.text_field :makeup, autocomplete: "makeup" %>
+  </div>
+  
+  <div class="field">
+    <%= f.label :hair %><br />
+    <%= f.text_field :hair,  autocomplete: "hair" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :wadrobe %><br />
+    <%= f.text_field :wadrobe,  autocomplete: "wadrobe" %>
+  </div>
+  
+  <div class="field">
+    <%= f.label :artist_name %><br />
+    <%= f.text_field  :artist_name,  autocomplete: "artist_name" %>
+  </div>
   <br />
         <%= f.submit %>
 <% end %>
+
+<div>
+<%= link_to "Home", artists_path %> <br>
