--- a/app/views/glams/show.html.erb
+++ b/app/views/glams/show.html.erb
@@ -1,9 +1,11 @@
-<%# <h1><%= link_to @glam.makeup, glam_path(@glam)</h1>  %>
-<h1> Glam Squad -- <%= @glam.glam_squad %></h1> <br>
-<h1>Makeup -- <%= @glam.makeup %></h1> <br>
-<h2>Hair -- <%= @glam.hair %></h2> <br>
-<h2>Wardbrobe --  <%= @glam.wardrobe %></h2> <br></h2>
-
-<%# <%= link_to "All squads", glams_path %><br> 
-<%= link_to "Add New Squad", new_glam_path %><br>
-<%= link_to "Home", artists_path %>
+ <body>
+ <%# <div class="wrapper"> %>
+   <ul class="collection with-header">
+         <li class="collection-header"><h2>Glam Squad: <%= @glam.glam_squad %></h2></li>
+         <li class="collection-item"><div><h4>Makeup Artist: <%= @glam.makeup %></h4><a href="#!" class="secondary-content"></a></div></li>
+         <li class="collection-item"><div><h4>Hair Stylist: <%= @glam.hair %><h4><a href="#!" class="secondary-content"></a></div></li>
+         <li class="collection-item"><div><h4>Wardbrobe: <%= @glam.wardrobe %><h4><a href="#!" class="secondary-content"></a></div></li>
+       </ul>
+ </body>
+<%= link_to "Home", artists_path%>
+<h6><%= link_to("Delete this glam squad", @glam, method: :delete, data:{confirm: "Do you want to delete this glam squad?"}) %></h6>
