--- a/app/views/artists/female.html.erb
+++ b/app/views/artists/female.html.erb
@@ -1,4 +1,4 @@
-<h2 class= "center">FEMALE ARTISTS</h2>
+<h2 class= "center white-text">FEMALE ARTISTS</h2>
 <% @females.each do |female| %>
 <ul class="collection with-header">
 <li class="collection-header"><h4> <%= female.name%></h4></li>
