--- a/app/views/artists/male.html.erb
+++ b/app/views/artists/male.html.erb
@@ -1,4 +1,4 @@
-<h2 class= "center">MALE ARTISTS</h2>
+<h2 class= "center white-text">MALE ARTISTS</h2>
 <% @males.each do |male| %>
 <ul class="collection with-header">
 <li class="collection-header"><h4> <%= male.name%></h4></li>
