--- a/app/views/glams/index.html.erb
+++ b/app/views/glams/index.html.erb
@@ -1,4 +1,4 @@
-<h2 class= "center"> YG FAMILY GLAM SQUADS</h2>
+<h2 class= "center white-text"> YG FAMILY GLAM SQUADS</h2>
 <% @glams.each do |glam| %>
 <ul class="collection with-header">
 <li class="collection-header"><h4> <li> Glam Squad <%= link_to glam.glam_squad, glam_path(glam) %></h4></li>
