--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,17 +31,21 @@
   body {
     /* background-color: rgb(255, 255, 255); */
     /* background-image: url('images/smkg.png'); */
-    background-image: url('images/BigBang.jpg');
-    color: #333;
-    font-family: Sans-Serif;
-    line-height: 18px;
+    /* background-image: url('images/BigBang.jpg'); */
+    /* color: #333; */
+    /* font-family: Sans-Serif; */
+    /* line-height: 18px; */
+    background-image: url("https://www.pexels.com/photo/blue-and-purple-cosmic-sky-956999/")
   } 
+  
   .container{
   align-content: right;
   width: 100%;
   height: 50%;
 }
-
+.row{
+  
+}
   .wrapper {
     background: whitesmoke;
      background-image: url('images/BigBang.jpg');
@@ -62,10 +66,17 @@
     font-size: 24px;
    
   }
+.error{
+    color: darkred;
+}
 
+.error-field{
+    border-style: solid;
+    border-width: 5px;
+    border-color: darkred;
+}
 
   .a{
-    /* margin-bottom: 18px; */
     color: cornsilk;
     font-style: normal;
     font-size: 20px;
@@ -77,7 +88,6 @@
 
   }
   p{
-    /* margin-bottom: 18px; */
     color: black;
     font-size: 20px;
   }
