--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -6,17 +6,15 @@
        <li> <%= link_to "Male Artist",male_path(@male) %> </li>
        <li> <%= link_to "Add New Artist", new_artist_path %> </li>
         <li><%= link_to 'Edit your account', edit_user_registration_path %></li>
+       <li>  Welcome <%= current_user.username %> </li>
         <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
       </ul>
     </div>
   </nav>
-<% if user_signed_in? %>
-   <i class="small material-icons">account_circle </i><p class="align-right"> Welcome <%= current_user.username %></p></i><br>
-<%end %>
 
 <% @artists.each do |artist| %>
   <ul class="collection with-header">
-        <li class="collection-item"><div><p class="white "> <%= link_to artist.name, artist_path(artist)%> </p><a class="secondary-content"><i class="material-icons">send</i></a></div></li>
+        <li class="collection-item"><div><p class="white "> <%= link_to artist.name, artist_path(artist)%> </p><a class="secondary-content"></a></div></li>
       </ul>			
 <% end  %>
 </div>
